chapter13_node_network_security/kubia.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: kubia-1
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    ports:
    - containerPort: 8080
      hostPort: 9000
      protocol: TCP
