chapter13_node_network_security/only-curl-kubia.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: kubia-only-curl
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    ports:
    - containerPort: 8080
