chapter13_node_network_security/pod-as-non-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-as-non-root
spec:
  containers:
  - image: alpine
    name: main
    command: ["/bin/sleep","99999999"]
    securityContext:
      runAsNonRoot: true
