chapter13_node_network_security/pod-as-user-guest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-as-user-guest
spec:
  containers:
  - image: alpine
    name: main
    command: ["/bin/sleep","99999999"]
    securityContext:
      runAsUser: 405
