chapter13_node_network_security/pod-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-privileged
spec:
  containers:
  - image: alpine
    name: main
    command: ["/bin/sleep","99999999"]
    securityContext:
      privileged: true
