chapter13_node_network_security/pod-with-host-network.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-with-host-network
spec:
  hostNetwork: true
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep","9999999"]
