chapter13_node_network_security/pod-with-host-pid-and-ipc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-pid-and-ipc
spec:
  hostPID: true
  hostIPC: true
  containers:
  - image: alpine
    name: main
    command: ["/bin/sleep","99999999"]
