chapter13_node_network_security/network-policy-kubia.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: curl-kubia-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
